<resources>
    <string name="app_name">iStock Management</string>
    <string name="app_logo">iStock\nManagement</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="package_inside">Inner Package Count</string>
    <string name="package_count">Enter Package Number</string>
    <string name="save_product">Save</string>
    <string name="cont_desc_product_image">Product Image</string>
    <string name="cont_desc_nav_drawer">nav drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- Shadi Section -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_color">Product Color</string>
    <string name="company_name">NurIsPvc</string>
    <string name="incoming_product">IncomeProducts</string>
    <string name="stock">Stock</string>
    <string name="field_total_count">total_package_count</string>
    <string name="field_products">Products</string>
    <string name="would_you_add_this_product">Would You Like To Add This Product to Product List?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="product_depth">Product Depth</string>
    <string name="product_weight">Product Weight</string>
    <string name="product_height">Product Height</string>
    <string name="product_width">Product Width</string>
    <string name="product_weight_mt_ad">Product Weight MT/UNITE</string>
    <string name="load_image">Load Image</string>
    <string name="load_image_message">Please Load Image For This Product</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_product_dialog">This product does not exist do you want to add this product to the list?</string>
    <string name="scan_new_barcode">Scan Barcode</string>
    <string name="successfully_added">Product Successfully Saved</string>
    <string name="navigate_to_scan">If you want to navigate back to scanning products press Yes</string>
    <string name="fill_product_id">Please Insert Product ID</string>
    <string name="fill_product_color">Please Insert Product Color</string>
    <string name="fill_product_name">Please Insert Product Name</string>
    <string name="fill_product_height">Please Insert Product Height</string>
    <string name="fill_product_width">Please Insert Product Width</string>
    <string name="fill_product_weight">Please Insert Product Weight</string>
    <string name="fill_product_package_in_num">Please Insert Product Package Bar Count</string>
    <string name="incoming_products">IncomingProducts</string>
    <string name="field_client">Clients</string>
    <string name="fill_inner_package">Please fill count of inner package</string>
    <string name="fill_package_count">Please fill package count</string>
    <string name="field_trademark">Trademark</string>
    <string name="product_trade">Product Trademark</string>
    <string name="field_id">id</string>
    <string name="field_name">name</string>
    <string name="field_color">color</string>
    <string name="field_height">height</string>
    <string name="field_width">width</string>
    <string name="field_depth">depth</string>
    <string name="field_kg">kg</string>
    <string name="field_type">type</string>
    <string name="field_imgUrl">imgUrl</string>
    <string name="field_inner_count">inner_count</string>
    <string name="field_unite">unite</string>
    <string name="inside_package_count">Enter Package Total Size/Count</string>
    <string name="field_total_quantity">total_quantity</string>
    <string name="sold_product">SoldProducts</string>
    <string name="scan_new_barcode_in">Scan Product For Store</string>
    <string name="scan_new_barcode_out">Scan Product Out Of Store</string>
    <string name="requested_quantity_not_exist">The quantity requested is not available</string>
    <string name="product_does_not_exist">This product does not exist at your Store!</string>
    <string name="no_product_in_product_list">The Product You Scanned Not Recognized Please Add It To Your  Product List</string>
    <string name="add_new_product_to_list">Add Product To The List</string>
    <string name="add_new_trademark">Add New Trademark</string>
    <string name="trademark_id">Trademark ID</string>
    <string name="trademark_name">Trademark Name</string>
    <string name="field_types">Types</string>
    <string name="please_wait_message">Please Wait</string>
    <string name="please_select_type">Please Select Type</string>
    <string name="please_select_trademark">Please Select Trademark</string>
    <string name="please_enter_id">Please Enter Product Id</string>
    <string name="successfully_founded">Product Founded!</string>
    <string name="failed_to_find">Failed To Find Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="save_update">Save Update</string>
    <string name="search_for_product">Search Product</string>
    <string name="save_update_product">Update Product</string>
    <string name="error_loading_image">Error Occurred While Loading Image</string>


    <!-- ALi Section -->
    <string name="splash_app_name">iStock\nManagement</string>
    <string name="hint_edit_text_username">Username or Email</string>
    <string name="btn_login">Login</string>
    <string name="btn_buy">Buy</string>
    <string name="btn_reset_password">Send password reset email</string>

    <string name="divider_or">OR</string>
    <string name="hint_edit_text_password">Password</string>
    <string name="hint_forgot_password"><u>Forgot Password ?</u></string>
    <string name="hint_reset_password">Reset your password</string>

    <string name="card_header_incomes">Incomes</string>
    <string name="card_header_outcomes">Outcomes</string>
    <string name="card_header_products">Products</string>
    <string name="card_header_stock">Stock</string>

    <string name="tab_over_view">Overview</string>
    <string name="tab_operations">Operations</string>


    <string name="toast_press_back_again_to_exit">Press back again to exit</string>
    <string name="toast_empty_filed_wrong">Field can\'t be empty</string>
    <string name="toast_enter_valid_password">please enter a valid password</string>
    <string name="toast_check_your_data">please check your data</string>
    <string name="toast_wrong_email_syntax">please enter a valid email address</string>
    <string name="toast_reset_email_success">Reset email success</string>

    <string name="dialog_message_email_sent">An email has been sent to </string>

</resources>
