<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addNewProduct"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/add_new_product_to_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ScanBarcodeIn"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/scan_new_barcode_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/addNewProduct" />

    <Button
        android:id="@+id/ScanBarcodeOut"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/scan_new_barcode_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScanBarcodeIn" />

    <Button
        android:id="@+id/addNewTrademark"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/add_new_trademark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScanBarcodeOut" />

</androidx.constraintlayout.widget.ConstraintLayout>