<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/txtView_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/font_logo2"
        android:gravity="center_horizontal"
        android:text="@string/hint_reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtView_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtView_dialog_header"
        android:visibility="invisible"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dialog_message_email_sent" />

    <EditText
        android:id="@+id/editTxt_email_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtView_dialog_header"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/hint_edit_text_username"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_send_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxt_email_resend"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_primary_states"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/btn_reset_password"
        android:textColor="@color/color_white" />

</RelativeLayout>