<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shadi.EditProduct.SearchForProduct">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progressBarWait"
            style="?android:attr/progressBarStyle"
            android:layout_width="214dp"
            android:layout_height="210dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/pleaseWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/please_wait_message"
            android:textSize="10pt" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/select_type"
            android:hint="@string/please_select_type"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/edit_text_standard"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/select_trademark"
            android:hint="@string/please_select_trademark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/edit_text_standard"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/enter_id"
            android:hint="@string/please_enter_id"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/edit_text_standard"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/search_product"
            android:text="@string/search_for_product"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/button_primary_states"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>